force-app/main/default/objects/CampaignMember/fields/Is_Attended__c.field-meta.xml
<CustomField>
    <fullName>Is_Attended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Attended</label>
    <type>Checkbox</type>
</CustomField>