force-app/main/default/objects/CampaignMember/validationRules/Require_Total_Attendees_When_Attended.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Total_Attendees_When_Attended</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    Is_Attended__c = TRUE,
    ISBLANK(Total_Attendees__c)
)</errorConditionFormula>
    <errorMessage>Please enter Total Attendees.</errorMessage>
</ValidationRule>